sftp: use stat instead of lstat

Using lstat leads to symlinks being truncated (since the file gets
truncated according to the size of the symlink, and not the size of the
target file).

open and sftpGet now use sftp_stat, while the remaining methods
(sftpPut, stat, mkdir, rename, symlink) still use sftp_lstat.

BUG: 497195